# yt-dlp-mcp

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/scripts/: deploy.sh  destroy.sh  terraformw.sh
backend/src/yt_dlp_mcp/: __init__.py  config.py  main.py  mcp_tools.py  worker.py
backend/src/yt_dlp_mcp/db/: database.py  jobs.py
backend/src/yt_dlp_mcp/mcp/: tools.py
backend/src/yt_dlp_mcp/services/: downloader.py  fallback_transcriber.py  local_transcriber.py  storage.py  transcriber.py  youtube_info.py
backend/src/yt_dlp_mcp/utils/: url.py
backend/tests/: test_jobs_and_transcripts.py  test_tool_dedup.py  test_url_utils.py
frontend/: README.md  server.py
mcp-server/: pyproject.toml
mcp_server/: server.py
parakeet/: Dockerfile
parakeet/patches/: diarization_init.py  transcription_fix.py
scripts/: deploy.sh  destroy.sh  terraformw.sh
src/yt_dlp_mcp/: __main__.py  main.py  types.py  worker.py
src/yt_dlp_mcp/db/: jobs.py  transcripts.py
src/yt_dlp_mcp/mcp/: __init__.py
src/yt_dlp_mcp/services/: downloader.py  storage.py  transcriber.py
src/yt_dlp_mcp/utils/: url.py
terraform/: main.tf  outputs.tf  production.s3.tfbackend  variables.tf  versions.tf
tests/: test_url_utils.py  test_worker.py
