[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dlp-mcp"
version = "0.1.0"
description = "Async FastMCP video transcription service using yt-dlp with local GPU (Parakeet + pyannote) and AssemblyAI fallback"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.12.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.0",
  "torch>=2.2.0",
  "torchaudio>=2.2.0",
  "nemo_toolkit[asr]>=2.0.0",
  "pyannote.audio>=3.3.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.9.0",
]

[project.scripts]
yt-dlp-mcp = "yt_dlp_mcp.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_return_any = true
warn_unused_configs = true
packages = ["yt_dlp_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
