[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dlp-mcp-frontend"
version = "0.1.0"
description = "FastMCP proxy frontend for yt-dlp-mcp"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.12.0",
  "httpx>=0.28.0",
]

[project.scripts]
yt-dlp-mcp-frontend = "server:cli"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
